--- a/Views/Checkout/Purchase.cshtml
+++ b/Views/Checkout/Purchase.cshtml
@@ -17,8 +17,23 @@
                 </div>
                 <img style="width: 90%" class="card-img-bottom" src="@Model.Thumbnail" alt="Card image cap">
             </div>
+            <section>
+                <div class="bt-drop-in-wrapper">
+                    <div id="bt-dropin"></div>
+                </div>
+            </section>
             <hr />
             <button class="btn btn-success" type="submit"><span>Confirm payment - $@Model.Price</span></button>
         </form>
     </div>
 </div>
+
+<script src="https://js.braintreegateway.com/web/dropin/1.22.0/js/dropin.min.js"></script>
+<script>
+    var client_token = "@ViewBag.ClientToken";
+
+    braintree.dropin.create({
+        authorization: client_token,
+        container: '#bt-dropin'
+    })
+</script>
