Added generic PaymentGateway to support any payment gateways

--- a/Views/Checkout/Failure.cshtml
+++ b/Views/Checkout/Failure.cshtml
@@ -3,5 +3,5 @@
     ViewData["Title"] = "Failure";
 }
 
-<h1 class="text-center text-danger">Your payment failed!</h1>
+<h1 class="text-center text-danger">Payment could not be processed</h1>
 
