--- a/Views/Checkout/Success.cshtml
+++ b/Views/Checkout/Success.cshtml
@@ -3,5 +3,5 @@
     ViewData["Title"] = "Success";
 }
 
-<h1 class="text-center text-success">Your payment was successful!</h1>
+<h1 class="text-center text-success">Payment was successful</h1>
 
