impelemented "Admin Dashboard"

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Checkout" asp-action="OurPlans">Subscriptions</a>
+                            <a class="nav-link text-dark" asp-controller="Checkout" asp-action="LoadAllPlans">Payment Plans</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Admin Dashboard</a>
                         </li>
                     </ul>
                 </div>
@@ -34,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            2020 - Library App
+            Feb 21, 2021 - Library App
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
