apply some renamings

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryApp.Data.ViewModels.DashboardVM;
+﻿@model LibraryApp.Data.ViewModels.TransactionBundle;
 
 @{
     ViewData["Title"] = "Index";
