use partial tag to avoid deadlock

--- a/Views/Checkout/Purchase.cshtml
+++ b/Views/Checkout/Purchase.cshtml
@@ -18,8 +18,8 @@
                 <img style="width: 90%" class="card-img-bottom" src="@Model.Thumbnail" alt="Card image cap">
             </div>
 
-            @*@Html.Partial("_PurchaseBraintree")*@
-            @Html.Partial("_PurchaseStripe")
+            @* <partial name="_PurchaseBraintree" /> *@
+            <partial name="_PurchaseStripe" />
 
         </form>
     </div>
