--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LibraryApp.Data.ViewModels.TransactionBundle;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Admin Dashboard";
 }
 
-<h2>Stripe overview</h2>
+<h2>Overview</h2>
 <div class="row">
     <div class="col-md-6">
         <h4>Available Credit: $@string.Format("{0:#.00}", Convert.ToDecimal(@Model.Balance.Available.Sum(n => n.Amount)) / 100) </h4> 
@@ -37,3 +37,26 @@
     </tbody>
 </table>
 
+<hr />
+
+<h2>Customers</h2>
+
+<table class="table">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Balance</th>
+            <th scope="col">Created</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var customer in Model.Customers)
+        {
+            <tr>
+                <th scope="row">@customer.Name</th>
+                <td>$@string.Format("{0:#.00}", Convert.ToDecimal(@customer.Balance) / 100)</td>
+                <td>@customer.Created</td>
+            </tr>
+        }
+    </tbody>
+</table>
