Retrieve & display Stripe Refunds&Disputes

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -87,3 +87,55 @@
         }
     </tbody>
 </table>
+
+<h2>Disputes</h2>
+<table class="table">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">Amount</th>
+            <th scope="col">Created</th>
+            <th scope="col">Currency</th>
+            <th scope="col">Reason</th>
+            <th scope="col">Status</th>
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var dispute in Model.Disputes)
+        {
+            <tr>
+                <th scope="row">$@string.Format("{0:#.00}", Convert.ToDecimal(@dispute.Amount) / 100)</th>
+                <td>@dispute.Created</td>
+                <td>@dispute.Currency</td>
+                <td>@dispute.Reason</td>
+                <td>@dispute.Status</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h2>Refunds</h2>
+<table class="table">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">Amount</th>
+            <th scope="col">Receipt Number</th>
+            <th scope="col">Created</th>
+            <th scope="col">Currency</th>
+            <th scope="col">Reason</th>
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var refund in Model.Refunds)
+        {
+            <tr>
+                <th scope="row">$@string.Format("{0:#.00}", Convert.ToDecimal(refund.Amount) / 100)</th>
+                <td>@refund.ReceiptNumber</td>
+                <td>@refund.Created</td>
+                <td>@refund.Currency</td>
+                <td>@refund.Reason</td>
+            </tr>
+        }
+    </tbody>
+</table>
